C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ACTION_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CHARGE_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CHARGE_DENSITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CURRENT_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_FIELD_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2010;